UI: Rest chrome button default styles and fixed item detail align

--- a/src/App.scss
+++ b/src/App.scss
@@ -57,6 +57,11 @@ ol {
   list-style: none;
 }
 
+button {
+  background-color: transparent;
+  border: 0;
+}
+
 .reset-font-size {
   font-size: 0;
 }
@@ -311,7 +316,6 @@ ol {
 
     .header__title {
       max-width: 54vw;
-      text-transform: uppercase;
     }
   }
 
@@ -451,6 +455,7 @@ ol {
 
   &__image-container ~ &__content {
     padding-left: 2.4vw;
+    min-height: 16.45vw;
   }
 
   &__detail {
@@ -617,10 +622,6 @@ ol {
 
   &__product-detail {
     z-index: 300;
-
-    .item {
-      margin-bottom: 70px;
-    }
   }
 
   &__section-container {
@@ -683,7 +684,6 @@ ol {
   position: absolute;
   bottom: 0;
   padding: 15px 0 21.6vw;
-  width: 100%;
   max-height: 80%;
 
 
@@ -829,6 +829,10 @@ ol {
   background-color: $dark;
   border-radius: 4px;
 
+  button {
+    height: 12vw;
+  }
+
   &__icon-container {
     position: relative;
     display: inline-block;
@@ -864,9 +868,7 @@ ol {
     display: none;
     padding: 1vw;
     height: 100%;
-    line-height: 12vw;
     color: $theme-color;
-    text-decoration: none;
   }
 
   &.has-products {
